# mongo_operations_agent

./: .env.example  README.md  mongo_operations_agent.py  pyproject.toml
src/: my_llm_engine.py  my_mongo_client.py
